--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,8 @@
 * {
 	box-sizing: border-box;
 }
-body{
+
+body {
 	background: #000;
 	margin: 0;
 	padding: 0;
@@ -85,7 +86,8 @@ body{
 .navigation__link-block .link-block__item:last-of-type {
 	margin-right: none;
 }
-a{
+
+a {
 	text-decoration: none;
 	color: inherit;
 }
@@ -155,16 +157,17 @@ a{
 	width: 305px;
 }
 
-.exchange-form__first-form, .exchange-form__second-form {
+.exchange-form__first-form, .exchange-form__second-form, .exchange-form__third-form {
 	width: 100%;
 	display: none;
 }
 
-.exchange-form__first-form.active, .exchange-form__second-form.active {
+.exchange-form__first-form.active, .exchange-form__second-form.active, .exchange-form__third-form.active {
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: flex-start;
 	align-items: flex-start;
+	font-family: Exo;
 }
 
 .exchange-form__crypto-block, .exchange-form__currency-block, .exchange-form__quantity-block, .exchange-form__button-next, .exchange-form__descrip-block, .exchange-form__indicator, .exchange-form__email-block, .exchange-form__wallet-adress-block, .exchange-form__bank-block, .exchange-form__swift-block, .exchange-form__account-block {
@@ -176,12 +179,17 @@ a{
 
 .exchange-form__descrip {
 	display: block;
-	font-family: Exo;
 	font-size: 16px;
 	line-height: 20px;
 	color: #FBFBFB;
+	/* text-overflow: ellipsis; */
+	white-space: nowrap;
+	overflow: hidden;
+	margin-right: 5px;
 }
-
+.exchange-form__descrip_gold{
+	color: #F4D17F;
+}
 select, input {
 	width: 100%;
 }
@@ -200,7 +208,14 @@ select, input {
 	letter-spacing: 0.05em;
 	color: #FBFBFB;
 	cursor: pointer;
-	text-transform:uppercase;
+	text-transform: uppercase;
+}
+
+.exchange-form__button-next_cancel {
+	background: transparent;
+	box-shadow: 1px 1px 22px transparent;
+	border: 2px solid #ff5c5c80;
+	color: rgba(255, 92, 92, 0.5);
 }
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!  */
@@ -220,20 +235,20 @@ select, input {
 	border: 1px solid #76C599;
 	box-sizing: border-box;
 }
-.exchange-wrap-own::after{
+
+.exchange-wrap-own::after {
 	content: "";
 	width: 0px;
 	height: 0px;
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
-	border-top:7px solid#76C599;
+	border-top: 7px solid#76C599;
 	position: absolute;
 	top: 20px;
 	right: 15px;
-	
 }
+
 .exchange-wrap-own__item {
-	font-family: Exo;
 	cursor: pointer;
 	padding: 11px 22px;
 	font-size: 16px;
@@ -241,14 +256,17 @@ select, input {
 	color: #76C599;
 	user-select: none;
 }
-.exchange-wrap-own__item:hover{
+
+.exchange-wrap-own__item:hover {
 	background-color: #ddd;
 }
-.exchange-wrap-own__item:nth-last-child(1){
+
+.exchange-wrap-own__item:nth-last-child(1) {
 	border-bottom-right-radius: 22px;
 	border-bottom-left-radius: 22px;
 }
-.exchange-wrap-own__item:nth-child(1){
+
+.exchange-wrap-own__item:nth-child(1) {
 	border-radius: 22px;
 	border: 1px solid #76C599;
 	box-sizing: border-box;
@@ -270,20 +288,20 @@ select, input {
 	border: 1px solid #76C599;
 	box-sizing: border-box;
 }
-.exchange-wrap-want::after{
+
+.exchange-wrap-want::after {
 	content: "";
 	width: 0px;
 	height: 0px;
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
-	border-top:7px solid#76C599;
+	border-top: 7px solid#76C599;
 	position: absolute;
 	top: 20px;
 	right: 15px;
-	
 }
+
 .exchange-wrap-want__item {
-	font-family: Exo;
 	cursor: pointer;
 	padding: 11px 22px;
 	font-size: 16px;
@@ -291,49 +309,52 @@ select, input {
 	color: #76C599;
 	user-select: none;
 }
-.exchange-wrap-want__item:hover{
+
+.exchange-wrap-want__item:hover {
 	background-color: #ddd;
 }
-.exchange-wrap-want__item:nth-last-child(1){
+
+.exchange-wrap-want__item:nth-last-child(1) {
 	border-bottom-right-radius: 22px;
 	border-bottom-left-radius: 22px;
 }
-.exchange-wrap-want__item:nth-child(1){
+
+.exchange-wrap-want__item:nth-child(1) {
 	border-radius: 22px;
 	border: 1px solid #76C599;
 	box-sizing: border-box;
 	display: block;
 }
-.currency-quantity{
-	display: flex; 
+
+.currency-quantity {
+	display: flex;
 	align-items: center;
 }
-.currency-quantity__input{
-	font-family: Exo;
+
+.currency-quantity__input {
 	padding: 11px 22px;
 	border-radius: 22px;
 	border: 1px solid #76C599;
 	width: 185px;
-	color:#76C599;
+	color: #76C599;
 	font-size: 16px;
 	line-height: 20px;
 }
-.currency-quantity__text{
+
+.currency-quantity__text {
 	display: inline-block;
-	font-family: Exo;
 	margin-left: 10px;
 	font-size: 16px;
 	line-height: 20px;
 	letter-spacing: 0.05em;
 	color: #FBFBFB;
 	width: 110px;
-	text-overflow: ellipsis; 
+	text-overflow: ellipsis;
 	white-space: nowrap;
-    overflow: hidden;
+	overflow: hidden;
 }
 
-.exchange-props-bank__input{
-	font-family: Exo;
+.exchange-props-bank__input {
 	cursor: pointer;
 	padding: 11px 22px;
 	font-size: 16px;
@@ -342,27 +363,109 @@ select, input {
 	user-select: none;
 	border-radius: 22px;
 	border: 1px solid #76C599;
+	margin-top: 4px;
 }
-.exchange-form-pointer{
+
+.exchange-props-bank__input:focus{
+	outline: none;
+}
+
+.exchange-props-bank__input_disabled{
+	background: #60605d4d;
+	border: 1px solid transparent;
+	height: 42px;
+	display: flex;
+	position: relative;
+}
+.exchange-form__descrip_input{
+	border: none;
+	background:transparent;
+}
+
+.exchange-props-bank__input_disabled::placeholder{
+	color: #fff;
+}
+
+.exchange-form-pointer {
 	display: flex;
 	width: 36px;
 	justify-content: space-between;
 	margin: 0 auto;
 }
-.exchange-form-pointer__item{
+
+.exchange-form-pointer__item {
 	width: 11px;
 	height: 11px;
 	border-radius: 50%;
 	border: 1px solid #32E280;
 	cursor: pointer;
 }
-.exchange-form-pointer__item_active{
+
+.exchange-form-pointer__item_active {
 	background-color: #32E280;
 	box-shadow: 1px 1px 12px #32E280;
 }
-.d-none{
+
+.exchange-form-block-text {
+	padding-bottom: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	width: 305px;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 20px;
+}
+
+.exchange-form-block-text__item {
+	font-weight: normal;
+	color: #FBFBFB;
+	opacity: 0.5;
+	margin-right: 20px;
+}
+
+.exchange-form-block-text__item_active {
+	font-weight: bold;
+	color: #FBFBFB;
+	opacity: 1;
+}
+.currency-form__text{
+	color: #fbfbfb;
+	margin-left: 20px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+
+}
+.exchange-form__btn-copy{
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 20px;
+	color: #2CD583;
+	background-color: transparent;
+	border: none;
+	margin-left: auto;
+	cursor: pointer;
+	text-transform: uppercase;
+}
+.exchange-form__btn-copy:hover{
+	font-weight: bold;
+	color: #F4D17F;
+}
+.exchange-form__btn-copy:active{
+	font-weight: bold;
+	color: #F4D17F;
+	position: relative;
+	top:1px
+}
+.exchange-form__btn-copy:focus{
+	outline: none;
+}
+.d-none {
 	display: none;
 }
-.d-block{
+
+.d-block {
 	display: block;
 }
