--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,9 @@ body {
 	align-items: flex-start;
 }
 
-.content-section__img-bg {}
+.content-section__img-bg {
+	width: 100%;
+}
 
 .content-section-block-img {
 	display: flex;
